tests/ui/generic-associated-types/issue-90014-tait2.stderr
error[E0792]: expected generic lifetime parameter, found `'a`
  --> $DIR/issue-90014-tait2.rs:25:9
   |
LL | type Fut<'a> = impl Future<Output = ()>;
   |          -- this generic parameter must be used with a generic lifetime parameter
...
LL |         Box::new((async { () },))
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0792`.
